--- a/apitests/package.json
+++ b/apitests/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "apitest": "cross-env ENV=test cucumber-js ./src/features/**/*.feature --tags \"@response-verification\" --require-module ts-node/register --require ./src/step-definitions/**/**/*.ts -f html:test-results/cucumber_report.html"
+    "apitest": "cross-env ENV=test cucumber-js ./src/features/**/*.feature --tags \"@ibltest\" --require-module ts-node/register --require ./src/step-definitions/**/**/*.ts -f html:test-results/cucumber_report.html"
   },
   "keywords": [],
   "author": "",
